--- a/Shiny.theme.css
+++ b/Shiny.theme.css
@@ -1,4 +1,4 @@
-/*[[Dbgimage]]*/
+//META{"name":"ShinyOcto","description":"Vaporwave Theme.","author":"Kappa123","version":"1.0"}*//
 /* EVERY LINK HAS TO BE HTTPS:// TO WORK IN DISCORD */
 .app {
     background-image: url("https://puu.sh/ppBIC/043197355e.jpg") !important;
