--- a/Shiny.theme.css
+++ b/Shiny.theme.css
@@ -2233,3 +2233,6 @@ img.image {
     border: 1px solid #3DA9A9 !important;
     background: #3DA9A9 !important;
 }
+.layers { 
+    background: transparent !important;
+}
